Added watch for file content changes. The editor will now warn if the contents of the opened phrases files have changed on disk compared to the ones loaded.
Fixes #9

--- a/phraseseditor.css
+++ b/phraseseditor.css
@@ -127,4 +127,18 @@
     border-bottom-color:#730800;
 }
 
+.notification-type-info {
+    color:#000094;
+}
+
+.notification-type-warning {
+    color:#b1b100;
+    font-weight: bold;
+}
+
+.notification-type-error {
+    color:red;
+    font-weight: bold;
+}
+
 body { padding-bottom: 70px; }
