--- a/ui/templates/row-view-content.mustache
+++ b/ui/templates/row-view-content.mustache
@@ -1,5 +1,10 @@
 {{# column }}
 <td class="column" style="width:{{columnPercent}}%">
-	<span data-index="{{ index }}">{{# removed }}<del>{{/ removed }}{{# data }}{{{ data }}}{{/ data }}{{^ data }}<strong>No value set</strong>{{/ data }}{{# removed }}</del>{{/ removed }}</span>
+	<span data-index="{{ index }}">
+		{{# removed }}<del>{{/ removed }}
+			{{# data }}{{{ data }}}{{/ data }}
+			{{^ data }}<strong>No value set</strong>{{/ data }}
+		{{# removed }}</del>{{/ removed }}
+	</span>
 </td>
 {{/ column }}
