Added highlighting of matched phrase
Uses new setting highlightMatchedPhrase, set to true if feature is
desirable

--- a/phraseseditor.css
+++ b/phraseseditor.css
@@ -166,6 +166,10 @@
     transition: width 2s, height 2s, background-color 2s, transform 2s;
 }
 
+.matching-text {
+    font-weight: bolder;
+}
+
 body {
     padding-bottom: 70px;
 }
