--- a/templates/java/namespace-class.mustache
+++ b/templates/java/namespace-class.mustache
@@ -1,25 +1,25 @@
-	public static class {{ namespace }} {
+	public static class {{{ namespace }}} {
 
 		{{# initFunctions }}
 		{{# phraseConstants }}
-		public static TranslatableConstant {{ constantName }} = null;
+		public static TranslatableConstant {{{ constantName }}} = null;
 		{{/ phraseConstants }}
 		{{/ initFunctions }}
 
 		static {
 			{{# initFunctions }}
-			{{ functionName }}();
+			{{{ functionName }}}();
 			{{/ initFunctions }}
 		}
 
 		{{# initFunctions }}
-		private static void {{ functionName }}() {
+		private static void {{{ functionName }}}() {
 			{{# phraseConstants }}
-			{{ namespace }}.{{ constantName }} = new TranslatableConstant("{{ constantName }}", "{{ namespace }}", "{{ constantKey }}");
+			{{{ namespace }}}.{{{ constantName }}} = new TranslatableConstant("{{{ constantName }}}", "{{{ namespace }}}", "{{{ constantKey }}}");
 			{{/ phraseConstants }}
 		}
 		{{/ initFunctions }}
 
-		private {{ namespace }}() {}
+		private {{{ namespace }}}() {}
 	}
 
