Added loading text when loading phrases data
Fixes #44

--- a/phraseseditor.css
+++ b/phraseseditor.css
@@ -170,6 +170,12 @@
     font-weight: bolder;
 }
 
+.loading-indicator {
+    margin-top: 150px;
+    color: lightgray;
+    text-align: center;
+}
+
 body {
     padding-bottom: 70px;
 }
